Trace with auth_service added
